tests/valid/import.lang
import hello "imported.lang";

proc main() void {
	hello.say_hello();
}
