tests/invalid/invalid_symbol.lang
module main

func main() {
    var hello i32 = a;
}
